--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
 <head>
-  <title>giflooper</title>
+  <title>battler</title>
 </head>
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type=text/javascript>
+  $(function() {
+    $('a#process_input').bind('click', function() {
+    $.getJSON('/background_process', {
+      proglang: $('input[name="proglang"]').val(),
+    }, function(data) {
+      $("#result").text(data.result);
+    });
+    return false;
+    });
+  });
+</script>
 
 <body>
   <h1>Battler</h1>
-  <p>enter your name</p>
-
-  <form action="/name_entered" method="POST">
-    <input type="text" name="player_name">
-    <br>
-    <input type="submit" value="Enter">
+  <p>select no. of players</p>
+  <form action="">
+    <input type="radio" name="player_no" id="login-button" value="one_player"> OnePlayer<br>
+    <input type="radio" name="player_no" id="register-button" value="two_player"> TwoPlayer<br>
   </form>
+  <p>enter your name(s)</p>
+    <form action="/name_entered" method="POST">
+      <input type="text" placeholder="PlayerOne" name="player_name">
+      <input type="submit" value="Enter">
+      <div id="two_p" class="hide">
+        <input type="text" placeholder="PlayerTwo" name="player_two_name">
+      </div>
+    </form>
+    <div class='container'>
+		<h3>Welcome! Which is the best programming language of them all?</h3>
+			<form>
+				<input type=text size=5 name=proglang>
+				<a href=# id=process_input><button class='btn btn-default'>Submit</button></a>
+			</form>
+		<p id=result></p>
+		</div>
 </body>
+
+<!-- <heax
