--- a/templates/home.html
+++ b/templates/home.html
@@ -6,15 +6,15 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type=text/javascript>
-  $(function() {
-    $('a#process_input').bind('click', function() {
-    $.getJSON('/background_process', {
-      proglang: $('input[name="proglang"]').val(),
-    }, function(data) {
-      $("#result").text(data.result);
-    });
-    return false;
-    });
+  $(document).ready(function() {
+     $('input[type="radio"]').click(function() {
+         if($(this).attr('id') == 'two-player') {
+              $('#two_p').show();
+         }
+         else {
+              $('#two_p').hide();
+         }
+     });
   });
 </script>
 
@@ -22,25 +22,15 @@
   <h1>Battler</h1>
   <p>select no. of players</p>
   <form action="">
-    <input type="radio" name="player_no" id="login-button" value="one_player"> OnePlayer<br>
-    <input type="radio" name="player_no" id="register-button" value="two_player"> TwoPlayer<br>
+    <input type="radio" name="player_no" id="one-player" value="one_player"> OnePlayer<br>
+    <input type="radio" name="player_no" id="two-player" value="two_player"> TwoPlayer<br>
   </form>
   <p>enter your name(s)</p>
     <form action="/name_entered" method="POST">
       <input type="text" placeholder="PlayerOne" name="player_name">
       <input type="submit" value="Enter">
-      <div id="two_p" class="hide">
+      <div id="two_p" class="hide" style='display:none'>
         <input type="text" placeholder="PlayerTwo" name="player_two_name">
       </div>
     </form>
-    <div class='container'>
-		<h3>Welcome! Which is the best programming language of them all?</h3>
-			<form>
-				<input type=text size=5 name=proglang>
-				<a href=# id=process_input><button class='btn btn-default'>Submit</button></a>
-			</form>
-		<p id=result></p>
-		</div>
 </body>
-
-<!-- <heax
